--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/babel-plugin": "^11.2.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@tailwindcss/forms": "^0.3.3",
     "@types/dinero.js": "^1.6.5",
